examples/test/testpolicy2993.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2993
  namespace: namespace496
spec:
  podSelector:
    matchLabels:
      key13: value20
      key44: value0
      key9: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value19
          key20: value30
          key27: value24
      podSelector:
        matchLabels:
          key16: value38
          key9: value34
